# Magma-Template

./: .gitignore  .gitmodules  CMakeLists.txt
app/src/: main.cpp
